# backupr

./: .dockerignore  .gitignore  AUTO_UPDATE.md  CLIENT_IMPROVEMENTS.md  CONTRIBUTING.md  FILENAME_FIX_SUMMARY.md  IMPLEMENTATION.md  LARGE_FILES_SUPPORT.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SCHEDULER.md  SUMMARY.md  UNIFIED_SERVER.md  USAGE.md  biome.json  compose.yml  docker-compose.yml  package-lock.json  package.json  todo.md
.zed/: settings.json
apps/agent/: .gitignore  Cargo.toml  README.md  backupr.conf  build.rs  package.json  tsconfig.json
apps/agent-rust/: Cargo.toml  README.md  backupr.conf  build.rs
apps/agent-rust/.cargo/: config.toml
apps/agent-rust/scripts/: build-all.sh  release.sh  setup.ps1
apps/agent-rust/src/: ipc.rs  ipc_server.rs  main.rs  notifications.rs  setup.rs  update.rs
apps/agent-rust/src/backup/: mod.rs  runner.rs
apps/agent-rust/src/lib/: config.rs
apps/agent/scripts/: build-all.sh  build-windows.mjs  bump-version.sh  install-helper.ps1  install.ps1  keygen.sh  release.sh  setup-fallback.ps1  setup-no-tray.ps1  setup.ps1
apps/agent/src/: backup.ts  ipc_server.rs  main.rs  main.ts  notifications.rs  setup.ts  update.rs
apps/app/: .dockerignore  Dockerfile  docker-entrypoint.sh  middleware.ts  next.config.ts  package.json  proxy.ts  server.js
apps/app/app/: globals.css  layout.tsx
apps/app/hooks/: use-data.tsx
apps/app/lib/: token.ts
apps/app/prisma/: schema.prisma  seed.js  seed.ts
apps/client/: .env.example  ELECTRON_MIGRATION.md  FLOW_DIAGRAMS.md  README.md  SCHEDULING_SYSTEM.md  electron-builder.json  index.html  package.json  tailwind.config.js  vite.config.js
apps/client/electron/: auto-updater.js  backup-manager.js  ipc-handlers.js  main-old.js  main.js  preload.js  scheduler.js  window-manager.js
apps/client/hooks/: use-memory.tsx
apps/client/lib/: utils.ts
apps/client/prisma/: schema.prisma
apps/client/public/: icon.png.txt
apps/client/src/: App.jsx  index.css  main.js  main.jsx
apps/frontend/: next.config.ts  package.json  proxy.ts
apps/frontend/app/: globals.css  layout.tsx
apps/frontend/hooks/: use-data.tsx
apps/frontend/lib/: api.ts
apps/proxy/: Dockerfile  nginx.conf
apps/proxy/conf.d/: default.conf
apps/server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  package.json  prisma.config.ts  tsconfig.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: agent-status.ts  backup.ts  cli.ts  index.ts  main.ts  routes.ts  scheduler.ts  websocket.ts  ws.agent.ts  ws.web.ts
apps/web/: Dockerfile  README.md  components.json  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.docker.ts  vite.config.ts
apps/ws/: Dockerfile  index.js  package.json  server.js
docs/: DATABASE.md  DEVELOPMENT.md  SERVER_SETUP.md
scripts/: Remove-Backupr.ps1
(+287 files in other folders)
