[package]
name = "backupr-agent"
version = "2.0.4"
edition = "2024"
authors = ["calirko"]
description = "Backupr backup agent service"
build = "build.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls", "stream"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hostname = "0.3"
num_cpus = "1.16"
regex-lite = "0.1"

[build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
